Make Ferris animated!!!! :3

--- a/index.html
+++ b/index.html
@@ -11,8 +11,12 @@
 
 class: middle, center
 
-![ferris](public/img/ferris.png)
+![ferris](public/img/ferris.gif)
 # a very brief intro to rust
+
+???
+
+* This is Ferris, our unofficial mascot!
 
 ---
 class: middle, left
@@ -359,7 +363,7 @@ class: middle, left
 ---
 class: middle, center
 
-![ferris](public/img/ferris.png)
+![ferris](public/img/ferris.gif)
 
 # go forth and write some Rust!
 
